# bob

./: .gitmodules  CMakeLists.txt  README.md
data/: bob.desktop  heaven.flac  music.flac  net.dosowisko.Bob.appdata.xml
data/icons/: bob.icns  icon.rc
data/shaders/: dis.glsl  ghosttree.glsl
data/voice/: 1.flac  2.flac  3.flac  4.flac  5.flac  6.flac  7.flac  8.flac  9.flac  die1.flac  die2.flac  stairs1.flac  stairs2.flac  stairs3.flac  stairs4.flac  stairs5.flac  stairs6.flac
flatpak/: net.dosowisko.Bob.json
src/: CMakeLists.txt  common.c  common.h  main.c
src/gamestates/: dosowisko.c  empty.c  example.c  game.c  heaven.c  loading.c
